--- a/styles/pages/checkout/checkout-header.css
+++ b/styles/pages/checkout/checkout-header.css
@@ -35,10 +35,8 @@
   display: none;
 }
 
-/* @media is used to create responsive design (making the
-   website look good on any screen size). This @media
-   means when the screen width is 575px or less, different
-   styles (inside the {...}) will be applied. */
+/* @media is used to create responsive design 
+*/
 @media (max-width: 575px) {
   .checkout-header-left-section {
     width: auto;
