--- a/styles/shared/general.css
+++ b/styles/shared/general.css
@@ -1,13 +1,9 @@
 body {
   font-family: Roboto, Arial;
   color: rgb(33, 33, 33);
-  /* The <body> element has a default margin of 8px
-     on all sides. This removes the default margins. */
   margin: 0;
 }
 
-/* <p> elements have a default margin on the top
-   and bottom. This removes the default margins. */
 p {
   margin: 0;
 }
@@ -64,9 +60,8 @@ input, select, button {
 
 /* These styles will limit text to 2 lines. Anything
    beyond 2 lines will be replaced with "..."
-   You can find this code by using an A.I. tool or by
-   searching in Google.
-   https://css-tricks.com/almanac/properties/l/line-clamp/ */
+  Use chatgpt for further clarification.
+ */
 .limit-text-to-2-lines {
   display: -webkit-box;
   -webkit-line-clamp: 2;
@@ -83,7 +78,8 @@ input, select, button {
   color: rgb(196, 80, 0);
 }
 
-/* Styles for dropdown selectors. */
+/* Styles for dropdown selectors. 
+*/
 select {
   color: rgb(33, 33, 33);
   background-color: rgb(240, 240, 240);
